--- a/less/html.less
+++ b/less/html.less
@@ -370,6 +370,12 @@ table {
 	}
 }
 
+.ancho-justo-9 {
+	th {
+		width: 11.111111%
+	}	
+}
+
 .nums {
 	td {
 		font-size: 1.8rem;
@@ -472,6 +478,8 @@ form {
 	}
 	
 	select {
+		cursor: pointer;
+
 		optgroup {
 		}
 	}
