--- a/less/tema.less
+++ b/less/tema.less
@@ -83,7 +83,7 @@ BOTONES
 	background: @negro;
 	color: @blanco;
 	font-weight: 600;
-	font-size: 1.4rem;
+	font-size: 1.5rem;
 	text-align: center;
 	text-decoration: none;
 	text-transform: uppercase;
@@ -158,6 +158,7 @@ BOTONES
 		.rectangle-in;
 		color: @azul-light;
 		background: @azul-light;
+		text-transform: none;
 		border: 1px solid @azul-light;
 
 		&:before {
