--- a/less/07-desktop.less
+++ b/less/07-desktop.less
@@ -21,4 +21,14 @@ header {
 	}
 }
 
+#login {
+	background: url('../images/fondo-login.jpg') left top no-repeat;
+	background-size: cover;
+}
+
+#recuperar {
+	background: url('../images/fondo-recuperar.jpg') left top no-repeat;
+	background-size: cover;
+}
+
 }
