--- a/css/gimav.css
+++ b/css/gimav.css
@@ -6780,8 +6780,13 @@ USUARIO
   fill: #808080;
 }
 .cuenta-datos select {
+  appearance: button;
+  -moz-appearance: button;
+  /* Firefox */
+  -webkit-appearance: button;
   margin: 20px 0;
-  width: 100%;
+  padding: 0px 10px;
+  width: 94%;
   height: 48px;
   background: #e9e9e9;
   color: #808080;
@@ -6886,6 +6891,9 @@ USUARIO
   min-height: 138px;
   border-right: 1px solid #e9e9e9;
 }
+.form-bloque .form-group:first-child {
+  margin-bottom: 20px;
+}
 .form-bloque.single {
   min-height: inherit;
 }
@@ -6916,6 +6924,11 @@ USUARIO
   display: table-cell;
 }
 .form-bloque select {
+  appearance: button;
+  -moz-appearance: button;
+  /* Firefox */
+  -webkit-appearance: button;
+  padding: 0 10px;
   height: 34px;
   width: 88%;
   background: #ffffff;
@@ -6928,6 +6941,17 @@ USUARIO
   border-radius: 6px;
   behavior: url(PIE.htc);
   display: table-cell;
+  -webkit-transition: background 0.3s ease-out;
+  -moz-transition: background 0.3s ease-out;
+  -o-transition: background 0.3s ease-out;
+  transition: background 0.3s ease-out;
+}
+.form-bloque select:hover {
+  background: #e9e9e9;
+  -webkit-transition: background 0.3s ease-out;
+  -moz-transition: background 0.3s ease-out;
+  -o-transition: background 0.3s ease-out;
+  transition: background 0.3s ease-out;
 }
 .form-bloque span {
   position: absolute;
@@ -6947,6 +6971,23 @@ USUARIO
 }
 .form-bloque svg {
   fill: #ffffff;
+}
+.form-bloque #desde,
+.form-bloque #hasta {
+  background: #ffffff;
+  cursor: pointer;
+  -webkit-transition: background 0.3s ease-out;
+  -moz-transition: background 0.3s ease-out;
+  -o-transition: background 0.3s ease-out;
+  transition: background 0.3s ease-out;
+}
+.form-bloque #desde:hover,
+.form-bloque #hasta:hover {
+  background: #e9e9e9;
+  -webkit-transition: background 0.3s ease-out;
+  -moz-transition: background 0.3s ease-out;
+  -o-transition: background 0.3s ease-out;
+  transition: background 0.3s ease-out;
 }
 /* 
 UNO
@@ -7058,28 +7099,13 @@ HEADER
 }
 /* Tablet Widescreen */
 @media only screen and (min-width: 992px) {
-  /*********************
-SLIDER
-*********************/
-  #slider .carousel-indicators {
-    bottom: 15px;
+  #login {
+    background: url('../images/fondo-login-1024.jpg') left top no-repeat;
+    background-size: cover;
   }
-  /*********** Slides ***********/
-  .item .texto {
-    position: absolute;
-    width: 100%;
-    background: transparent;
-    left: ;
-    top: 32%;
-  }
-  .item h1 {
-    font-size: 4.5rem;
-  }
-  .item p {
-    font-size: 2.2rem;
-  }
-  .item figure {
-    text-align: center;
+  #recuperar {
+    background: url('../images/fondo-recuperar-1024.jpg') left top no-repeat;
+    background-size: cover;
   }
 }
 /* Notebook */
@@ -7093,6 +7119,14 @@ HEADER
   /*********************
 HEADER
 *********************/
+  #login {
+    background: url('../images/fondo-login.jpg') left top no-repeat;
+    background-size: cover;
+  }
+  #recuperar {
+    background: url('../images/fondo-recuperar.jpg') left top no-repeat;
+    background-size: cover;
+  }
 }
 /* Widescreen */
 @media only screen and (min-width: 1440px) {
