Ajustes de resolución e incñusión de imágenes

--- a/less/05-tablet.less
+++ b/less/05-tablet.less
@@ -7,12 +7,12 @@ Autor:				Marco A. Hernández Pérez
 ================================================== */
 .tablet () {
 #login {
-	background: url('../images/fondo-login-1024.jpg') left top no-repeat;
+	background: url('../images/fondo-login-1024.jpg') fixed no-repeat;
 	background-size: cover;
 }
 
 #recuperar {
-	background: url('../images/fondo-recuperar-1024.jpg') left top no-repeat;
+	background: url('../images/fondo-recuperar-1024.jpg') fixed no-repeat;
 	background-size: cover;
 }
 
