--- a/less/07-desktop.less
+++ b/less/07-desktop.less
@@ -22,12 +22,12 @@ header {
 }
 
 #login {
-	background: url('../images/fondo-login.jpg') left top no-repeat;
+	background: url('../images/fondo-login.jpg') fixed no-repeat;
 	background-size: cover;
 }
 
 #recuperar {
-	background: url('../images/fondo-recuperar.jpg') left top no-repeat;
+	background: url('../images/fondo-recuperar.jpg') fixed no-repeat;
 	background-size: cover;
 }
 
