--- a/css/gimav.css
+++ b/css/gimav.css
@@ -6401,15 +6401,15 @@ LOGIN
 =============================================================
 */
 #login {
-  background: url('../images/fondo-login.jpg') left top no-repeat;
+  background: url('../images/fondo-login.jpg') fixed no-repeat;
   background-size: cover;
 }
 #recuperar {
-  background: url('../images/fondo-recuperar.jpg') left top no-repeat;
+  background: url('../images/fondo-recuperar.jpg') fixed no-repeat;
   background-size: cover;
 }
 .login-container {
-  position: fixed;
+  position: absolute;
   top: 0;
   right: 0;
   width: 50%;
@@ -6422,14 +6422,14 @@ LOGIN
   left: 0;
 }
 .login-container.recuperar .logo {
-  margin-bottom: 10%;
+  margin-bottom: 6%;
 }
 .login-container.recuperar form {
   margin-top: 20px;
 }
 .login-container h1 {
   margin-top: 0;
-  margin-bottom: 10%;
+  margin-bottom: 6%;
   font-size: 2.3rem;
   font-weight: 400;
   color: #ffffff;
@@ -6504,9 +6504,12 @@ LOGIN
   margin-left: 20px;
   margin-right: 24px;
 }
+.login-container .fake-margin {
+  margin-bottom: 100px;
+}
 .logo {
-  margin-top: 13%;
-  margin-bottom: 32%;
+  margin-top: 7%;
+  margin-bottom: 17%;
   text-align: center;
 }
 /* 
@@ -6621,7 +6624,7 @@ header .navbar-default .navbar-nav li a:visited svg {
 header .navbar-default .navbar-nav li a:link span,
 header .navbar-default .navbar-nav li a:visited span {
   position: relative;
-  top: -6px;
+  top: -9px;
   display: inline-block;
   padding-left: 15px;
 }
@@ -6668,11 +6671,11 @@ header .navbar-default .navbar-nav .menu-usuario {
 header .navbar-default .navbar-nav .menu-usuario .dropdown-menu {
   padding: 0;
   margin: 0;
-  width: 215px;
+  width: 220px;
 }
 header .navbar-default .navbar-nav .menu-usuario a:link,
 header .navbar-default .navbar-nav .menu-usuario a:visited {
-  padding: 11px 20px;
+  padding: 8px 20px;
   width: 100%;
 }
 header .navbar-default .navbar-toggle {
@@ -6956,9 +6959,10 @@ USUARIO
 .form-bloque span {
   position: absolute;
   right: 4%;
+  width: 40px;
   height: 34px;
   padding: 0 8px;
-  padding-top: 5px;
+  padding-top: 9px;
   background: #c8c8c8;
   -webkit-border-bottom-right-radius: 6px;
   -webkit-border-top-right-radius: 6px;
@@ -7100,11 +7104,11 @@ HEADER
 /* Tablet Widescreen */
 @media only screen and (min-width: 992px) {
   #login {
-    background: url('../images/fondo-login-1024.jpg') left top no-repeat;
+    background: url('../images/fondo-login-1024.jpg') fixed no-repeat;
     background-size: cover;
   }
   #recuperar {
-    background: url('../images/fondo-recuperar-1024.jpg') left top no-repeat;
+    background: url('../images/fondo-recuperar-1024.jpg') fixed no-repeat;
     background-size: cover;
   }
 }
@@ -7120,11 +7124,11 @@ HEADER
 HEADER
 *********************/
   #login {
-    background: url('../images/fondo-login.jpg') left top no-repeat;
+    background: url('../images/fondo-login.jpg') fixed no-repeat;
     background-size: cover;
   }
   #recuperar {
-    background: url('../images/fondo-recuperar.jpg') left top no-repeat;
+    background: url('../images/fondo-recuperar.jpg') fixed no-repeat;
     background-size: cover;
   }
 }
