--- a/less/01-base.less
+++ b/less/01-base.less
@@ -17,17 +17,17 @@ LOGIN
 =============================================================
 */
 #login {
-	background: url('../images/fondo-login.jpg') left top no-repeat;
+	background: url('../images/fondo-login.jpg') fixed no-repeat;
 	background-size: cover;
 }
 
 #recuperar {
-	background: url('../images/fondo-recuperar.jpg') left top no-repeat;
+	background: url('../images/fondo-recuperar.jpg') fixed no-repeat;
 	background-size: cover;
 }
 
 .login-container {
-	position: fixed;
+	position: absolute;
 	top: 0;
 	right: 0;
 	width: 50%;
@@ -39,7 +39,7 @@ LOGIN
 		left: 0;
 
 		.logo {
-			margin-bottom: 10%;
+			margin-bottom: 6%;
 		}
 
 		form {
@@ -49,7 +49,7 @@ LOGIN
 
 	h1 {
 		margin-top: 0;
-		margin-bottom: 10%;
+		margin-bottom: 6%;
 		font-size: 2.3rem;
 		font-weight: 400;
 		color: @blanco;
@@ -122,11 +122,15 @@ LOGIN
 			}
 		}
 	}
+
+	.fake-margin {
+		margin-bottom: 100px;
+	}
 }
 
 .logo {
-	margin-top: 13%;
-	margin-bottom: 32%;
+	margin-top: 7%;
+	margin-bottom: 17%;
 	text-align: center;
 }
 /* 
@@ -200,7 +204,7 @@ header {
 
 					span {
 						position: relative;
-						top: -6px;
+						top: -9px;
 						display: inline-block;
 						padding-left: 15px;
 					} 
@@ -246,11 +250,11 @@ header {
 				.dropdown-menu {
 					padding: 0;
 					margin: 0; 
-					width: 215px;
+					width: 220px;
 				}
 
 				a:link, a:visited {
-					padding: 11px 20px;
+					padding: 8px 20px;
 					width: 100%;
 				}
 			}
@@ -525,9 +529,10 @@ USUARIO
 	span {
 		position: absolute;
 		right: 4%;
+		width: 40px;
 		height: 34px;
 		padding: 0 8px;
-		padding-top: 5px;
+		padding-top: 9px;
 		background: #c8c8c8;
 		.border-radius-right();
 		pointer-events: none;
